services/aemo-v6/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aemo-v6
  labels:
    name: aemo-v6
    app: aemo-v6
