services/aemo-v6/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aemo-v6-service
  namespace: aemo-v6
  labels:
    app: aemo-v6
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: aemo-v6
